--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ p {
 
 /* Add some basic styling to buttons */
 button {
-  padding: 5px 10px;
+  padding: 4px 5px;
+  margin: 4px 0px;
   background-color: darkgray;
   color: #fff;
   border: none;
@@ -79,4 +80,9 @@ button {
 
 button:hover {
   background-color: black;
+}
+
+.titleHeading {
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
