--- a/style.css
+++ b/style.css
@@ -5,13 +5,44 @@ body {
   padding: 0;
 }
 
-/* Set a base font and color */
+html {
+  background-color: #54329a;
+}
+
 body {
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
+/* Set a base font and color */
+#bodyContent {
   font-family: Arial, sans-serif;
   color: #333;
   max-width: 1000px;
   margin: auto;
   text-align: center;
+  background-color: #c9b4f2;
+  border-radius: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: inset;
+  overflow-x: auto;
+  height: 94vh;
+}
+
+#headContent {
+  font-family: Arial, sans-serif;
+  color: #333;
+  max-width: 1000px;
+  margin: auto;
+  text-align: center;
+  background-color: #c9b4f2;
+  border-radius: 20px;
+  padding: 10px;
+  margin-bottom: 5px;
+  border: inset;
+  overflow-x: auto;
+  margin-top: 1%;
 }
 
 .line {
@@ -70,9 +101,9 @@ p {
 /* Add some basic styling to buttons */
 button {
   padding: 4px 5px;
-  margin: 4px 0px;
-  background-color: darkgray;
-  color: #fff;
+  margin-bottom: 4px;
+  background-color: white;
+  color: black;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -80,9 +111,20 @@ button {
 
 button:hover {
   background-color: black;
+  color: white;
 }
 
 .titleHeading {
   margin-top: 10px;
   margin-bottom: 5px;
+}
+
+#currentTimeOfDay {
+  color: white;
+  text-shadow: 1px 1px black;
+}
+
+#timeTillStart {
+  color: white;
+  text-shadow: 1px 1px black;
 }
