--- a/style.css
+++ b/style.css
@@ -69,17 +69,17 @@ h3 {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 1.25em;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 1em;
   font-weight: bold;
 }
 
