--- a/style.css
+++ b/style.css
@@ -69,18 +69,35 @@ h3 {
 }
 
 h1 {
-  font-size: 1.5em;
+  font-size: 24px;
   font-weight: bold;
 }
 
 h2 {
-  font-size: 1.25em;
+  font-size: 20px;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 1em;
+  font-size: 16px;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 16px;
+  }
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 26px;
+  }
 }
 
 /* Style links */
